plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '3.4.0'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'raisetech'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    //OpenAPI Generator
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
    // Apache Commons Lang
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    //Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    // MySQLドライバー
    runtimeOnly 'com.mysql:mysql-connector-j'
    // MyBatis
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
    // APサーバー(Tomcat)
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    // SpringBoot Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // MyBatis Test
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
    //H2(InMemoryDB)
    testImplementation 'com.h2database:h2:2.2.224'
}

tasks.named('test') {
    useJUnitPlatform()
}
